<resources>
    <string name="app_name">GymWithMe</string>

    <string name="drawer_home">Home</string>
    <string name="drawer_friends">Friends</string>
    <string name="drawer_workout">Workout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_working_out">Start Working Out!</string>
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="title_activity_gym_home">GymHomeActivity</string>
    <string name="nav_header_title">GymWithMe</string>
    <string name="nav_header_subtitle">Dream it, do it</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_social">Contact</string>
    <string name="menu_qr">Detect</string>
    <string name="menu_about">About</string>
    <string name="scan_machine">Scan Now</string>
    <string name="app_title">Gym With Me</string>
    <string name="about_description">Mobile App Development Project</string>
    <string name="team_members">Team Members:
        \nJohanna Maria Gmeiner
        \nIsabelle Marie Gill
        \nUriel Madrigal
        \nAlberto Labrada</string>
    <string name="menu_more">More</string>
    <string name="home_text">Gym With Me!</string>
    <string name="home_explain">Press the button to start the workout</string>

    <!-- login -->
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="working_out">How long have you been working out?</string>
    <string name="gwm_logo">gym with me logo</string>
    <string name="or">or</string>
    <string name="logout">Log Out</string>
    <string name="workout">Workout</string>
    <string name="scan">Scan</string>
    <string name="content_description_start_workout">Start WorkOut</string>
    <string name="friends">Friends</string>
    <string name="welcome_msg">Welcome to the fittest app ever</string>
    <string name="home_instructions">What do you want to do today?</string>
    <string name="view_all_routines">View All Routines</string>
    <string name="connect">Connect with\ncoach</string>
    <string name="content_muscle">muscle image icon</string>
    <string name="add">Add</string>
    <string name="description_title">Title:</string>
    <string name="description_author">Author:</string>
    <string name="description_workout">Workout:</string>
    <string name="description_level">Level:</string>
    <string name="description_muscles">Muscle Group:</string>
    <string name="content_image_qr">This is a qr image</string>
    <string name="qr_instructions">With this feature, you can scan your local gym machine and automatically redirect you to a video instructor!</string>
    <string name="menu_workout">Workout</string>

</resources>
