<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_qr_scan_workout"
            android:icon="@drawable/ic_home_qr_scan"
            android:title="@string/menu_qr" />
        <item
            android:id="@+id/nav_routine_workout"
            android:icon="@drawable/ic_home_start_wo"
            android:title="@string/menu_workout" />
        <item
            android:id="@+id/nav_social"
            android:icon="@drawable/ic_menu_friends"
            android:title="@string/menu_social" />

        <item android:title="@string/menu_more">
            <menu>

                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_menu_about"
                    android:title="@string/menu_about" />

            </menu>
        </item>

    </group>
</menu>
