<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.itesm.gymwithme.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_routineListFragment"
            app:destination="@id/nav_routine_workout" />
        <action
            android:id="@+id/action_nav_home_to_cameraXActivity"
            app:destination="@id/cameraXActivity" />
    </fragment>

    <fragment
        android:id="@+id/nav_social"
        android:name="com.itesm.gymwithme.ui.SocialFragment"
        android:label="@string/menu_social"
        tools:layout="@layout/fragment_social" />

    <fragment
        android:id="@+id/nav_qr_scan_workout"
        android:name="com.itesm.gymwithme.ui.QRScanWorkoutFragment"
        android:label="@string/menu_qr"
        tools:layout="@layout/fragment_qr_scan_workout" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.itesm.gymwithme.ui.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_routine_workout"
        android:name="com.itesm.gymwithme.ui.RoutineListFragment"
        android:label="@string/drawer_workout"
        tools:layout="@layout/fragment_routine_list">
        <action
            android:id="@+id/action_routineListFragment_to_routineDetailFragment"
            app:destination="@id/routineDetailFragment" />
    </fragment>
    <activity
        android:id="@+id/cameraXActivity"
        android:name="com.itesm.gymwithme.CameraXActivity"
        android:label="CameraXActivity" />
    <fragment
        android:id="@+id/routineDetailFragment"
        android:name="com.itesm.gymwithme.ui.RoutineDetailFragment"
        android:label="@string/drawer_workout"
        tools:layout="@layout/fragment_routine_detail" />
</navigation>