<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="nav_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home_fragment"
            android:icon="@drawable/ic_home"
            android:title="@string/drawer_home" />

        <item
            android:id="@+id/social_fragment"
            android:icon="@drawable/ic_friends"
            android:title="@string/drawer_friends" />

        <item
            android:id="@+id/workout_fragment"
            android:icon="@drawable/ic_weight_lifter"
            android:title="@string/drawer_workout" />

        <item android:title="More">
            <menu>
                <item
                    android:id="@+id/about_fragment"
                    android:icon="@drawable/ic_about"
                    android:title="About" />
            </menu>
        </item>

    </group>


</menu>