<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:fitsSystemWindows="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingRight="24dp"
        android:paddingLeft="24dp"
        android:paddingTop="56dp"
        android:orientation="vertical">

        <ImageView
            android:layout_height="72dp"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:src="@drawable/ic_menu_qr_scan_workout"/>

        <!-- Etiqueta usuario -->

        -<com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/username"
            android:inputType="text"
            android:id="@+id/inUser" />

    </com.google.android.material.textfield.TextInputLayout>

        <!-- Etiqueta contraseña -->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:id="@+id/inPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="60dp"
            android:id="@+id/button_login"
            android:text="@string/login"
            android:padding="12dp" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            />


    </LinearLayout>

</ScrollView>